metadatadeploy/objects/Newsfeed__c.object
<CustomObject>
    <label>Newsfeed</label>
    <nameField>
        <label>Newsfeed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Newsfeeds</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <label>PublishedDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>